--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "morgan": "^1.9.1"
+    "knex": "^0.20.13",
+    "morgan": "^1.9.1",
+    "pg": "^8.0.0",
+    "db": "^2.0.0",
+    "chai-http": "^4.3.0",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
