--- a/package.json
+++ b/package.json
@@ -5,24 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
-    "dev": "nodemon ./server.js",
-    "start": "node ./server.js",
-    "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "dev": "nodemon src/server.js",
+    "predeploy": "npm audit && npm run migrate:production",
+    "deploy": "git push heroku master",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "Jon Kimmel",
   "license": "ISC",
   "dependencies": {
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "db": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "json-parser": "^3.1.2",
     "helmet": "^3.21.2",
     "knex": "^0.20.13",
     "morgan": "^1.9.1",
     "pg": "^8.0.0",
-    "db": "^2.0.0",
-    "chai-http": "^4.3.0",
     "xss": "^1.0.6"
   },
   "devDependencies": {
