--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "author": "Jon Kimmel",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "db": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "json-parser": "^3.1.2",
     "helmet": "^3.21.2",
+    "json-parser": "^3.1.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
     "morgan": "^1.9.1",
     "pg": "^8.0.0",
